HW07 fix error